--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="#testimonials">Reviews</a>
             </div>
             <div class="auth-section">
-                <button class="login-btn" onclick="window.location.href='auth.html'">
+                <button class="login-btn" onclick="window.location.href='auth'">
                     <i class="fas fa-user"></i>
                     Sign up / Login
                 </button>
@@ -91,7 +91,7 @@
                         <h3>Monthly Plan</h3>
                         <div class="price-container">
                             <div class="price">
-                                <span class="amount">$9.99</span>
+                                <span class="amount">$14.99</span>
                                 <span class="period">/month</span>
                             </div>
                         </div>
@@ -100,8 +100,9 @@
                         <li>Unlimited scheduled tweets</li>
                         <li>Advanced analytics</li>
                         <li>Smart insights</li>
+                        <li>AI-powered tweet rewriting</li>
+                        <li>Content inspiration from your account</li>
                         <li>Custom integrations</li>
-                        <!--considering adding unlimited social accounts-->
                         <li>24/7 priority support</li>
                     </ul>
                     <button class="pricing-cta">Get Started</button>
@@ -113,7 +114,7 @@
                         <h3>Yearly Plan</h3>
                         <div class="price-container">
                             <div class="price">
-                                <span class="amount">$80</span>
+                                <span class="amount">$120</span>
                                 <span class="period">/year</span>
                             </div>
                             <div class="savings">Save 33%</div>
@@ -123,8 +124,9 @@
                         <li>Unlimited scheduled tweets</li>
                         <li>Advanced analytics</li>
                         <li>Smart insights</li>
+                        <li>AI-powered tweet rewriting</li>
+                        <li>Content inspiration from your account</li>
                         <li>Custom integrations</li>
-                       <!--considering adding unlimited social accounts-->
                         <li>24/7 priority support</li>
                     </ul>
                     <button class="pricing-cta">Get Started</button>
@@ -202,21 +204,14 @@
             </div>
             <div class="footer-section">
                 <h4>Company</h4>
-                <a href="#">About Us</a>
+                <a href="about">About Us</a>
                 <a href="#">Blog</a>
-                <a href="#">Careers</a>
-            </div>
-            <div class="footer-section">
-                <h4>Resources</h4>
-                <a href="#">Help Center</a>
-                <a href="#">API Docs</a>
-                <a href="#">Status</a>
             </div>
             <div class="footer-section">
                 <h4>Legal</h4>
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
-                <a href="#">Cookie Policy</a>
+                <a href="privacy-policy">Privacy Policy</a>
+                <a href="terms-of-service">Terms of Service</a>
+                <a href="cookie-policy">Cookie Policy</a>
             </div>
         </div>
         <div class="footer-bottom">
