--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="#testimonials">Reviews</a>
             </div>
             <div class="auth-section">
-                <button class="login-btn" onclick="window.location.href='auth'">
+                <button class="login-btn" onclick="window.location.href='/auth'">
                     <i class="fas fa-user"></i>
                     Sign up / Login
                 </button>
@@ -204,7 +204,7 @@
             </div>
             <div class="footer-section">
                 <h4>Company</h4>
-                <a href="about">About Us</a>
+                <a href="/about">About Us</a>
                 <a href="#">Blog</a>
             </div>
             <div class="footer-section">
