--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>TweetTimely - Social Media Scheduling & Analytics</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Add Twitter API SDK -->
+    <base href="/">
     <script src="https://platform.twitter.com/widgets.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
@@ -209,9 +210,9 @@
             </div>
             <div class="footer-section">
                 <h4>Legal</h4>
-                <a href="privacy-policy">Privacy Policy</a>
-                <a href="terms-of-service">Terms of Service</a>
-                <a href="cookie-policy">Cookie Policy</a>
+                <a href="/privacy-policy">Privacy Policy</a>
+                <a href="/terms-of-service">Terms of Service</a>
+                <a href="/cookie-policy">Cookie Policy</a>
             </div>
         </div>
         <div class="footer-bottom">
