--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
     <title>Page Not Found - TweetTimely</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="policy.css">
+    <base href="/">
 </head>
 <body>
     <div class="policy-container">
