--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>About Us - TweetTimely</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="policy.css">
+    <base href="/">
 </head>
 <body>
     <div class="policy-container">
