--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -6,6 +6,7 @@
     <title>Cookie Policy - TweetTimely</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="policy.css">
+    <base href="/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
