--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="#testimonials">Reviews</a>
             </div>
             <div class="auth-section">
-                <button class="login-btn" onclick="window.location.href='/auth'">
+                <button class="login-btn" onclick="window.location.href='auth.html'">
                     <i class="fas fa-user"></i>
                     Sign up / Login
                 </button>
@@ -205,14 +205,14 @@
             </div>
             <div class="footer-section">
                 <h4>Company</h4>
-                <a href="/about">About Us</a>
+                <a href="about.html">About Us</a>
                 <a href="#">Blog</a>
             </div>
             <div class="footer-section">
                 <h4>Legal</h4>
-                <a href="/privacy-policy">Privacy Policy</a>
-                <a href="/terms-of-service">Terms of Service</a>
-                <a href="/cookie-policy">Cookie Policy</a>
+                <a href="privacy-policy.html">Privacy Policy</a>
+                <a href="terms-of-service.html">Terms of Service</a>
+                <a href="cookie-policy.html">Cookie Policy</a>
             </div>
         </div>
         <div class="footer-bottom">
