--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="policy-container">
-        <a href="index" class="back-button">
+        <a href="./index.html" class="back-button">
             <i class="fas fa-arrow-left"></i>
             Back to Home
         </a>
