--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="policy-container">
-        <a href="index" class="back-button">Back to Home</a>
+        <a href="./index.html" class="back-button">Back to Home</a>
         <h1>About TweetTimely</h1>
         <p class="last-updated">
             Established 2024
