--- a/callback.html
+++ b/callback.html
@@ -35,6 +35,7 @@
         <h1>Authorizing Your Account</h1>
         <div class="loading-spinner"></div>
         <p>Please wait while we complete the authorization process...</p>
+        <p>If not redirected, <a href="dashboard.html">click here</a></p>
     </div>
     <script src="callback.js"></script>
 </body>
