--- a/verify-email.html
+++ b/verify-email.html
@@ -31,6 +31,7 @@
 
             <div class="verify-info">
                 <p>Already verified? <button id="refresh-page" class="refresh-btn">Refresh Page</button></p>
+                <p>Back to <a href="index.html">home page</a></p>
             </div>
         </div>
     </div>
