--- a/auth.html
+++ b/auth.html
@@ -49,7 +49,7 @@
                 </div>
                 <button type="submit" class="submit-btn">Login</button>
                 <div class="auth-links">
-                    <a href="#forgot-password">Forgot Password?</a>
+                    <a href="forgot-password.html">Forgot Password?</a>
                 </div>
             </form>
 
