--- a/dashboard.html
+++ b/dashboard.html
@@ -19,9 +19,9 @@
                 <div class="logo">TweetTimely</div>
             </div>
             <div class="nav-links">
-                <a href="/schedule">Schedule</a>
-                <a href="/analytics">Analytics</a>
-                <a href="/settings">Settings</a>
+                <a href="schedule.html">Schedule</a>
+                <a href="analytics.html">Analytics</a>
+                <a href="settings.html">Settings</a>
             </div>
             <div class="user-section">
                 <button id="connect-twitter" class="connect-twitter-btn" 
@@ -53,11 +53,11 @@
                 </div>
             </div>
             <div class="sidebar-menu">
-                <a href="#compose" class="compose-btn">
+                <a href="./compose.html" class="compose-btn">
                     <i class="fas fa-plus"></i>
                     New Tweet
                 </a>
-                <a href="#scheduled" class="active">
+                <a href="./scheduled.html" class="active">
                     <i class="far fa-clock"></i>
                     Scheduled Tweets
                 </a>
