--- a/index.html
+++ b/index.html
@@ -199,14 +199,14 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h4>Product</h4>
-                <a href="#features">Features</a>
-                <a href="#pricing">Pricing</a>
+                <a href="features.html">Features</a>
+                <a href="pricing.html">Pricing</a>
                 <a href="#testimonials">Reviews</a>
             </div>
             <div class="footer-section">
                 <h4>Company</h4>
                 <a href="about.html">About Us</a>
-                <a href="#">Blog</a>
+                <a href="blog.html">Blog</a>
             </div>
             <div class="footer-section">
                 <h4>Legal</h4>
