--- a/dashboard.html
+++ b/dashboard.html
@@ -24,8 +24,7 @@
                 <a href="settings.html">Settings</a>
             </div>
             <div class="user-section">
-                <button id="connect-twitter" class="connect-twitter-btn" 
-                        onclick="console.log('Button clicked')">
+                <button id="connect-twitter" class="connect-twitter-btn">
                     <span class="x-logo">𝕏</span>
                     Connect X Account
                 </button>
