--- a/callback.html
+++ b/callback.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https://api.twitter.com;">
     <title>Authenticating...</title>
 </head>
 <body>
     <p>Completing authentication...</p>
-    <script type="module" src="callback.js"></script>
+    <script type="module" src="./callback.js"></script>
 </body>
 </html> 
