--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https://api.twitter.com;">
+    <meta http-equiv="Content-Security-Policy" content="
+        default-src 'self' https:;
+        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.gstatic.com https://cdnjs.cloudflare.com chrome-extension:;
+        style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
+        connect-src 'self' https://api.twitter.com wss://ws-us3.pusher.com https://*.pusher.com;
+        img-src 'self' https: data:;
+        font-src 'self' https://cdnjs.cloudflare.com;
+        frame-src 'self' https://twitter.com;
+        worker-src 'self' blob:;
+    ">
     <title>Dashboard | TweetTimely</title>
     <link rel="stylesheet" href="styles.css">
     <base href="/">
