--- a/auth.html
+++ b/auth.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="
         default-src 'self' https:;
-        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.gstatic.com https://cdnjs.cloudflare.com chrome-extension:;
+        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.gstatic.com https://apis.google.com https://cdnjs.cloudflare.com chrome-extension: https://*.firebaseapp.com;
         style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
-        connect-src 'self' https://api.twitter.com wss://ws-us3.pusher.com https://*.pusher.com;
-        img-src 'self' https: data:;
+        connect-src 'self' https://api.twitter.com wss://ws-us3.pusher.com https://*.pusher.com https://*.googleapis.com https://*.firebaseauth.com https://*.firebaseapp.com https://identitytoolkit.googleapis.com;
+        img-src 'self' https: data: https://www.gstatic.com;
         font-src 'self' https://cdnjs.cloudflare.com;
-        frame-src 'self' https://twitter.com;
+        frame-src 'self' https://twitter.com https://accounts.google.com https://*.firebaseapp.com;
         worker-src 'self' blob:;
     ">
     <title>Sign up / Login | TweetTimely</title>
