--- a/dashboard.html
+++ b/dashboard.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="
         default-src 'self' https:;
-        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.gstatic.com https://cdnjs.cloudflare.com chrome-extension:;
+        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.gstatic.com https://cdnjs.cloudflare.com https://vercel.live https://*.twitter.com chrome-extension:;
         style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
-        connect-src 'self' https://api.twitter.com wss://ws-us3.pusher.com https://*.pusher.com;
+        connect-src 'self' https://api.twitter.com https://twitter.com https://*.twitter.com wss://ws-us3.pusher.com https://*.pusher.com;
         img-src 'self' https: data:;
         font-src 'self' https://cdnjs.cloudflare.com;
-        frame-src 'self' https://twitter.com;
+        frame-src 'self' https://twitter.com https://*.twitter.com;
         worker-src 'self' blob:;
     ">
     <title>Dashboard | TweetTimely</title>
