--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="
         default-src 'self' https:;
-        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.gstatic.com https://cdnjs.cloudflare.com chrome-extension:;
+        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.gstatic.com https://cdnjs.cloudflare.com https://vercel.live https://*.twitter.com chrome-extension: https://*.vercel.app;
         style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
-        connect-src 'self' https://api.twitter.com wss://ws-us3.pusher.com https://*.pusher.com;
+        connect-src 'self' https://api.twitter.com https://twitter.com https://*.twitter.com wss://ws-us3.pusher.com https://*.pusher.com https://*.vercel.app https://vercel.live;
         img-src 'self' https: data:;
         font-src 'self' https://cdnjs.cloudflare.com;
-        frame-src 'self' https://twitter.com;
+        frame-src 'self' https://twitter.com https://*.twitter.com https://vercel.live;
         worker-src 'self' blob:;
+        child-src 'self' blob: https://vercel.live;
     ">
     <meta name="description" content="Schedule your tweets and analyze your X (Twitter) performance with TweetTimely, your powerful social media management tool">
     <title>TweetTimely - Social Media Scheduling & Analytics</title>
