--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="
         default-src 'self' https:;
-        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.gstatic.com https://cdnjs.cloudflare.com https://vercel.live https://*.twitter.com chrome-extension: https://*.vercel.app;
+        script-src 'self' 'unsafe-inline' 'unsafe-eval' 'wasm-unsafe-eval' https://www.gstatic.com https://cdnjs.cloudflare.com https://vercel.live https://*.twitter.com chrome-extension: https://*.vercel.app;
         style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
         connect-src 'self' https://api.twitter.com https://twitter.com https://*.twitter.com wss://ws-us3.pusher.com https://*.pusher.com https://*.vercel.app https://vercel.live;
         img-src 'self' https: data:;
