--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h1>Transform Your X Presence</h1>
                 <p class="hero-subtitle">Schedule tweets, analyze performance, and grow your audience - all in one powerful platform.</p>
                 <div class="hero-cta">
-                    <button id="get-started" class="cta-button">Start Free Trial</button>
+                    <button id="get-started" class="cta-button" onclick="window.location.href='auth.html'">Start Free Trial</button>
                     <p class="cta-subtext">14 days free • No credit card required</p>
                 </div>
                 <div class="hero-stats">
