--- a/verify-email.html
+++ b/verify-email.html
@@ -16,7 +16,7 @@
                 <i class="fas fa-envelope"></i>
             </div>
             <h1>Verify Your Email</h1>
-            <p>We've sent a verification link to your email address. Please check your inbox and click the link to verify your account.</p>
+            <p>We have sent a verification link to your email address. Please check your inbox and click the link to verify your account.</p>
             
             <div class="verify-actions">
                 <button id="resend-email" class="resend-btn">
