--- a/callback.html
+++ b/callback.html
@@ -14,10 +14,10 @@
         worker-src 'self' blob:;
         child-src 'self' blob: https://vercel.live;
     ">
-    <title>Authenticating...</title>
+    <title>Authenticating.....</title>
 </head>
 <body>
-    <p>Completing authentication...</p>
+    <p>Completing authentication.....</p>
     <script type="module" src="./callback.js"></script>
 </body>
 </html> 
