--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -46,11 +46,11 @@
         </section>
 
         <section class="policy-section">
-            <h2>Managing Cookies</h2>
+            <h2>Managing Cookies </h2>
             <p>You have control over how cookies are used on your device. You can:</p>
             <ul class="policy-list">
                 <li>Accept or decline cookies through our cookie banner</li>
-                <li>Modify your browser settings to manage cookies</li>
+                <li>Modify browser settings to manage cookies</li>
                 <li>Delete existing cookies from your browser</li>
                 <li>Set your browser to reject all cookies (may affect functionality)</li>
             </ul>
