--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
         worker-src 'self' blob:;
         child-src 'self' blob: https://vercel.live;
     ">
-    <title>Dashboard | TweetTimely</title>
+    <title>Dashboard</title>
     <link rel="stylesheet" href="styles.css">
     <base href="/">
     <link rel="stylesheet" href="dashboard.css">
